# blinky-pico

./: .gitignore  README.md
src/: CMakeLists.txt  blink.c
